# Imgflop

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 2026-03-03-imgflop-design.md  2026-03-03-imgflop-implementation-plan.md
migrations/: 0001_init.sql  0002_meme_asset_link.sql  0003_admin_credentials.sql
src/: config.rs  diff.rs  lib.rs  main.rs
src/assets/: store.rs
src/auth/: mod.rs  session.rs
src/designer/: mod.rs  render.rs
src/ingest/: pipeline.rs
src/ops/: locking.rs  logging.rs  mod.rs  polling.rs  runs.rs  scheduler.rs
src/sources/: api.rs  mod.rs
src/store/: db.rs  mod.rs
src/web/: mod.rs
src/web/routes/: admin.rs  create.rs  gallery.rs  mod.rs
src/web/static/: app.css
src/web/templates/: admin.html  create.html  gallery.html  layout.html  meme_detail.html
tests/: admin_poll_runtime_test.rs  api_source_test.rs  assets_test.rs  auth_test.rs  config_test.rs  coverage_test.rs  designer_test.rs  diff_test.rs  e2e_smoke_test.rs  health_test.rs  ingest_pipeline_test.rs  locking_test.rs  logging_errors_test.rs  migrations_test.rs  persisted_polling_test.rs  scheduler_test.rs  web_db_backed_test.rs  web_pages_test.rs
tests/fixtures/: imgflip_get_memes.json
