[package]
name = "imgflop"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
