[package]
name = "imgflop"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8"
rand_core = { version = "0.6", features = ["getrandom"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
