[package]
name = "imgflop"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = { version = "0.8", features = ["multipart"] }
rand_core = { version = "0.6", features = ["getrandom"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
font8x8 = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-rustls", "macros", "migrate"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3.15"
tower = { version = "0.5", features = ["util"] }
